samples/_failures_safe/1761413149_04cc44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b766152.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_3b766152.c:183:17: error: expected expression at end of input
  183 |                 if (len >= MAX_TOKEN_LEN - 1)
      |                 ^~
./samples/SAFE/__tmp_3b766152.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b766152.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b766152.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b766152.c:183:17: error: expected declaration or statement at end of input
